# Shepherd-Shax

./: .md  Cargo.toml  README.md  points.frag  points.vert  svg.frag  svg.vert  vertex2rgba.bat  vertex2rgba.frag  vertex2rgba.vert  vertex2uv.bat  vertex2uv.frag  vertex2uv.vert
shaders/: points.frag.spv  points.vert.spv  vertex2rgba.frag.spv  vertex2rgba.vert.spv  vertex2uv.frag.spv  vertex2uv.vert.spv
src/: calligraphy.rs  main.rs  structures.rs  vertex.rs
